apps/covid19-dashboard/k8s-specifications/service.yml
apiVersion: v1
kind: Service
metadata:
  name: covid19-dashboard
spec:
  ports:
  - port: 80
    targetPort: 80
  selector:
    app: covid19-dashboard
