apps/covid19-dashboard/k8s-specifications/ingress.yml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  labels:
    app: covid19-dashboard  
  name: covid19-dashboard
  annotations:
    kubernetes.io/ingress.class: traefik
    ingress.kubernetes.io/ssl-redirect: "false"
spec:
  rules:
  - host: covid19.localhost
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: covid19-dashboard
            port:
              number: 80
